<resources>
    <string name="app_name">ExampleDemo</string>
    <string name="egg_prompt">How do you like your egg?</string>
    <string name="timer_on">Start</string>
    <string name="timer_off">Stop</string>
    <string name="notification_title">Egg Timer</string>
    <string name="notification_text">Your egg is ready!!</string>

    <string name="fcm_message">FCM Message</string>
    <string name="message_subscribe_failed">Failed to subscribe to topic</string>
    <string name="message_subscribed">Subscribed to topic</string>
    <string name="egg_notification_channel_id" translatable="false">egg_channel</string>
    <string name="egg_notification_channel_name" translatable="true">Egg</string>
    <string name="breakfast_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="breakfast_notification_channel_name" translatable="true">Breakfast</string>
    <string name="eggs_ready">It is time! Bon appetit!</string>
    <string name="timer_running">Egg timer is running...</string>
    <string name="breakfast_notification_channel_description">Breakfast reminder</string>
    <string name="snooze">Snooze</string>

    <!-- Multi Language -->
    <string name="tit_sign_in">Sign in</string>
    <string name="tit_sign_up">Sign up</string>
    <string name="tit_password_reset">Password reset</string>
    <string name="tit_forgot_password">Forgot password</string>
    <string name="tit_forgot_password_completed">Password reset email sent.</string>
    <string name="act_forgot_password">Forgot your password?</string>
    <string name="act_sign_in">Sign in</string>
    <string name="act_sign_in_with_facebook">Sign in with Facebook</string>
    <string name="act_sign_up_with_facebook">Sign up with Facebook</string>
    <string name="act_sign_up">Sign up</string>
    <string name="act_reset">Reset</string>
    <string name="act_send">Send</string>
    <string name="act_send_request">Send Request</string>
    <string name="act_ok">OK</string>
    <string name="act_cancel">Cancel</string>
    <string name="lbl_email">Email Address</string>
    <string name="lbl_new_password">New Password</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="msg_fotgot_password_completed">Please check your email.</string>
    <string name="msg_password_reset_completed">Your password has been reset successfully.</string>
    <string name="msg_login_with_new_password">Now log in your new password</string>
    <string name="txt_cheers">Cheers!</string>
    <string name="txt_required">*</string>
    <string name="tit_network_error">Internet error</string>
    <string name="msg_network_error">Internet error.\nConnecting to the Internet ,Please</string>
    <string name="tit_login_fail">Failed to Sign In</string>
    <string name="tit_system_internal_error">System error</string>
    <string name="tit_review">Review</string>
    <string name="tit_comments">Comments</string>
    <string name="tit_write_a_review">Write a review</string>
    <string name="msg_review_start_here">Your review starts here</string>
    <string name="msg_system_internal_error">Check system error,Please</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_quiz">Quiz</string>
    <string name="lbl_profile">Profile</string>
    <string name="msg_empty_data_home">no products</string>
    <string name="act_allow">Allow</string>
    <string name="act_setting">Setting</string>
    <string name="act_deny">Deny</string>
    <string name="act_add_favorite">Add favorite</string>
    <string name="act_remove_favorite">Remove favorite</string>
    <string name="act_add_to_my_sake">Add to My SAKE</string>
    <string name="act_remove_from_my_sake">Remove from My SAKE</string>
    <string name="act_place">Add Place</string>
    <string name="act_take_a_profile_photo">Take a Profile Photo</string>
    <string name="act_choose_from_gallery">Choose from Gallery</string>
    <string name="act_use_this_image">Use this image</string>
    <string name="titi_added_to_my_sake">Added to My SAKE.</string>
    <string name="msg_find_from_your_profile">You can find your complete list from your profile.</string>
    <string name="txt_comment_count">%d comments</string>
    <string name="lbl_brewery_name">Brewery</string>
    <string name="lbl_brand_name">Brand Name</string>
    <string name="lbl_sake_category">Sake Category</string>
    <string name="lbl_specific_name">Specific Name</string>
    <string name="lbl_rice_name">Rice Variety</string>
    <string name="lbl_alcohol_degree">Alcohol %</string>
    <string name="lbl_prefectures">Prefecture</string>
    <string name="lbl_other">Other</string>
    <string name="lbl_polishing_ratio">Polishing Ratio %</string>
    <string name="lbl_rice_polishing_rate">Rice polishing</string>
    <string name="lbl_taste_matrix">Tasting Matrix</string>
    <string name="lbl_body">Body</string>
    <string name="lbl_light">Light</string>
    <string name="lbl_aroma">Aroma</string>
    <string name="lbl_low">Low</string>
    <string name="lbl_high">High</string>
    <string name="lbl_rich">Rich</string>
    <string name="lbl_reviews">Reviews</string>
    <string name="lbl_comment">Comments</string>
    <string name="act_actions">Actions</string>
    <string name="act_add_review">Add review</string>
    <string name="act_view_all">View All</string>
    <string name="act_review">Write Review</string>
    <string name="act_read_less">Read less</string>
    <string name="act_read_more">Read more</string>
    <string name="act_see_translation">See translation</string>
    <string name="act_submit">Submit</string>
    <string name="act_add">Add </string>
    <string name="msg_empty_comment">no comments</string>
    <string name="act_see_more">See more</string>
    <string name="txt_days_ago">%d days ago</string>
    <string name="txt_months_ago">%d months ago</string>
    <string name="txt_years_ago">%d years ago</string>
    <string name="txt_hours_ago">%d hours ago</string>
    <string name="txt_minutes_ago">%d minutes ago</string>
    <string name="tit_notice">Sake</string>
    <string name="tit_all_products">All products</string>
    <string name="tit_popular_search">Popular Searches</string>
    <string name="tit_brands">Brands</string>
    <string name="tit_rice_varirties">Rice Varieties</string>
    <string name="tit_sake_category">Sake Category</string>
    <string name="lbl_keyword">Keyword</string>
    <string name="act_edt_filter">Edit Filter</string>
    <string name="act_search">Search</string>
    <string name="act_show_more">Show more</string>
    <string name="act_reset_filter">Reset Filter</string>
    <string name="tit_quiz_easy">Quiz: Easy</string>
    <string name="tit_challenenge_your_knowledge">Challenge your knowledge</string>
    <string name="tit_question">Question</string>
    <string name="tit_this_answer">This Answer is:</string>
    <string name="act_previous">Previous</string>
    <string name="act_next">Next</string>
    <string name="lbl_a">A</string>
    <string name="lbl_b">B</string>
    <string name="lbl_c">C</string>
    <string name="tit_scan_a_label">Scan a label</string>
    <string name="tit_preview">Preview</string>
    <string name="tit_scan_results">Scan Results</string>
    <string name="tit_import">Import</string>
    <string name="tit_photo_credits">Photo Credits</string>
    <string name="msg_there_a_matched_product_for_your_picture">There\'s no matched product for your picture.</string>
    <string name="tit_my_sake">My SAKE</string>
    <string name="tit_my_favorites">My Favorites</string>
    <string name="tit_notifications">Notifications</string>
    <string name="tit_about">About</string>
    <string name="tit_help_and_suppord">Help &amp; Support</string>
    <string name="tit_edit_profile">Edit Profile</string>
    <string name="tit_country">Country</string>
    <string name="tit_language">Language</string>
    <string name="tit_persional_information">Persional Information</string>
    <string name="tit_gender">Gender</string>
    <string name="tit_choose_your_country">Choose Your Country</string>
    <string name="lbl_photo_credits">Photo Credits</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_not_specified">Not Specified</string>
    <string name="lbl_english">English</string>
    <string name="lbl_japanese">Japanese</string>
    <string name="lbl_ver">Ver: </string>
    <string name="act_terms_of_use">Terms of Use</string>
    <string name="act_privacy_policy">Privacy Policy</string>
    <string name="act_edit_profile_picture">Edit profile picture</string>
    <string name="act_edit">Edit</string>
    <string name="act_done">Done</string>
    <string name="msg_login_facebook_failed">Login failed, please try again later or use another login method.</string>
    <string name="polishing_percentage_description">What is “polishing ratio”?\n\n“Polishing ratio is the number how amount white rice is milled.\nRice is covered with the germ and outer layers which have plenty of nutrition, i.e. proteinds, fats and minerals.\nHowever, when it comes to make sake, they could damage the balance of sake quality and spoil its flavor and color tone as a result, if there are excess of amount.\nThe percentage stands for that the more rice is polished, the smaller the number is.</string>
    <string name="tit_request_location_permission">tit_request_location_permission</string>
    <string name="msg_request_location_permission">msg_request_location_permission</string>
    <string name="tit_request_camera_permission">tit_request_camera_permission</string>
    <string name="msg_request_camera_permission">msg_request_camera_permission</string>
    <string name="tit_request_storage_permission">tit_request_storage_permission</string>
    <string name="msg_request_storage_permission">msg_request_storage_permission</string>
    <string name="start_using_camera">Start using camera</string>
    <string name="canvasContentDescription">Mini Paint is a simple line drawing app.
   Drag your fingers to draw. Rotate the phone to clear.</string>
    <string name="country">Country</string>
    <string name="header">Header</string>
    <string name="popup_window">Popup window</string>
</resources>
