<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.camera.CameraFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.exampledemo.ui.camera.CameraViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextureView
            android:id="@+id/cameraPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{(viewModel.viewState != viewModel.TOOK_PHOTO_STATE) ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/leftPlaceholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:background="@color/black"
                android:visibility="@{(viewModel.viewState == viewModel.PREVIEW_STATE) ? View.GONE : View.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="35dp"
                android:text="@string/tit_scan_a_label"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:visibility="@{(viewModel.viewState == viewModel.HELP_STATE) ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toTopOf="@+id/btnHelp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/btnHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_transperant"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:minWidth="120dp"
                android:minHeight="40dp"
                android:onClick="@{()->viewModel.onCloseHelp()}"
                android:text="@string/act_ok"
                android:textColor="@color/white"
                android:visibility="@{(viewModel.viewState == viewModel.HELP_STATE) ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHelp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/act_cancel"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:background="?attr/selectableItemBackground"
            android:padding="14dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/bottomNavigation"
            android:visibility="@{(viewModel.viewState != viewModel.TOOK_PHOTO_STATE) ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{(v)->viewModel.onChoosePicture(v)}"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_gallery"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{()->viewModel.onShowHelp()}"
                android:padding="8dp"
                android:src="@drawable/ic_help_circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/item_camera"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@color/white"
                android:divider="@color/black"
                android:dividerHeight="1.0dp"
                android:elevation="1dp"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="@{()->viewModel.onTakePhoto()}"

                app:cardCornerRadius="27.5dp"
                app:cardElevation="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:cardPreventCornerOverlap="false">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="12dp"
                    android:src="@drawable/ic_camera_small" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            layout="@layout/layout_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{(viewModel.viewState == viewModel.TOOK_PHOTO_STATE) ? View.VISIBLE : View.GONE}"
            app:cameraViewModel="@{viewModel}" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>